<resources>
    <string name="app_name">Gestao de Viagem</string>
    <string name="gestaoDeViagem">Gestão de Viagem</string>
    <string name="adicionarReceita">Adicionar Receita</string>
    <string name="receita">Receita</string>
    <string name="resultado">Resultado</string>
    <string name="adicionarDespesa">Adicionar Despesa</string>
    <string name="despesas">Despesas</string>
    <string name="despesa">Despesa</string>
    <string name="listaDeMovimentos">Lista de Movimentos</string>
    <string name="relatorio">Relatório</string>
    <string name="opcoes">Opções</string>
    <string name="categorias">Categorias</string>
    <string name="categoria">Categoria</string>
    <string name="valoresFixos">Valores Fixos</string>
    <string name="horaRat">HORA RAT</string>
    <string name="valorHora">Valor da hora de serviços prestados</string>
    <string name="alimentacao">Alimentação</string>
    <string name="valorAlimentacao">Valor diário de alimentação</string>
    <string name="valor">R$ Valor</string>
    <string name="salvar">Salvar</string>
    <string name="cancelar">Cancelar</string>
    <string name="descricao">Descrição</string>
    <string name="id">ID</string>
    <string name="tipo">Tipo</string>
    <string name="gv">GV\'s</string>
    <string name="rat">RAT</string>
    <string name="rats">RAT\'s</string>
    <string name="nrGv">GV</string>
    <string name="de">De</string>
    <string name="ate">Até</string>
    <string name="status">Status</string>
    <string name="data">Data</string>
    <string name="total">R$ </string>
    <string name="ddmmyyyy">01/01/1999</string>
    <string name="v99">199.99</string>
    <string name="v10">10.5</string>
    <string name="gerarAlimentacao">Gerar Alimentação</string>
    <string name="excluirItens">Excluir Itens</string>
    <string name="gerar">Gerar</string>
    <string name="sim">Sim</string>
    <string name="horasPonto">Horas: </string>
    <string name="horas">Horas</string>
    <string name="vincular_gv">Vincular GV</string>
    <string name="desvincular_gv">Desvincular GV</string>
    <string name="vincular">Vincular</string>
    <string name="bancoDeDados">Banco de Dados</string>
    <string name="backupDispositivo">Backup Dispositivo</string>
    <string name="backupDispositivoSub">Exportar dados para o dispositivo</string>
    <string name="restaurarBackupDispositivo">Restaurar do Dispositivo</string>
    <string name="restaurarBackupDispositivoSub">Importar dados do Dispositivo</string>
    <string name="registroExcluido">Registro excluído com sucesso!</string>
    <string name="registroInserido">Registro inserido com sucesso!</string>
    <string name="registroAlterado">Registro alterado com sucesso!</string>
    <string name="campoObrigatorio">Campo Obrigatório!</string>
    <string name="atencao">Atenção</string>
    <string name="atencaoE">Atenção!</string>
    <string name="nenhumRegistro">Nenhum Registro Encontrado!</string>
    <string name="gvVinculada">GV Vinculada com Sucesso!</string>
    <string name="gvDesvinculada">GV Desvinculada com Sucesso!</string>
    <string name="backupRealizado">Backup Realizado com Sucesso!</string>
    <string name="backupRealizadoErro">Erro ao Realizar Backup!</string>
    <string name="backupRestaurado">Backup Restaurado com Sucesso!</string>
    <string name="backupRestauradoErro">Erro ao Restaurar Backup!</string>
    <string name="desejaRealizarBackup">Deseja Realizar o Backup para seu Dispositivo?</string>
    <string name="desejaRestaurarbackup">Deseja Restaurar o Backup de seu Dispositivo?</string>
    <string name="nao">Não</string>
    <string name="escolhaUmaOpcao">Escolha uma Opção</string>
    <string name="excluir">Excluir</string>
    <string name="editar">Editar</string>
    <string name="observacao">Observação</string>
    <string name="InsiraObservacao">Insira uma observação</string>
    <string name="cadastro">Cadastro</string>
    <string name="gvItem">GV / Item</string>
    <string name="ratItem">RAT / Item</string>
    <string name="home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="desejaGerarAlimentacao">Deseja Gerar Alimentação Padrão do Período?</string>
    <string name="desejaExcluirAlimentacao">Deseja Excluir Todos os Itens do Período?</string>
</resources>
