<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

        <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_gv"
                android:icon="@drawable/icons8plus96"
                android:title="@string/nrGv"
                app:showAsAction="ifRoom"/>
        </group>

        <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_despesas"
                android:icon="@drawable/icons8minus96"
                android:title="@string/despesas" />
        </group>

        <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_rat"
                android:icon="@drawable/icons8list96"
                android:title="@string/rat" />
        </group>

        <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_relatorio"
                android:icon="@drawable/icons8account"
                android:title="@string/relatorio" />
        </group>

        <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_categorias"
                android:icon="@drawable/iconscategor96"
                android:title="@string/categorias" />
        </group>

        <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_opcoes"
                android:icon="@drawable/icons8config96"
                android:title="@string/opcoes" />
        </group>

</menu>
