<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:cardCornerRadius="10dp"
        app:cardElevation="16dp"
        app:cardUseCompatPadding="true"
        app:cardBackgroundColor="@android:color/white"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--Toolbar-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center"
                android:background="@color/greyDark">

                <TextView
                    android:id="@+id/inserirValorFixoTxtDescricao"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/TextTitleCenter"
                    android:textColor="@android:color/white"
                    android:text="@string/categoria"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextLabelBlue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/valor"/>

                <EditText
                    android:textAlignment="center"
                    android:id="@+id/edtVlLancamento"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/v99"
                    android:inputType="numberDecimal"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp">

                <Button
                    android:layout_gravity="center"
                    android:id="@+id/bttSalvarInserirValor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/salvar"
                    android:background="@drawable/curved_shape"
                    android:textColor="@android:color/white"
                    android:layout_weight="5"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"/>

                <Button
                    android:layout_gravity="center"
                    android:id="@+id/bttCancelar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cancelar"
                    android:background="@drawable/curved_shape"
                    android:textColor="@android:color/white"
                    android:layout_weight="5"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>