<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:cardCornerRadius="10dp"
        app:cardElevation="16dp"
        app:cardUseCompatPadding="true"
        app:cardBackgroundColor="@android:color/white"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--Toolbar-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center"
                android:background="@color/greyDark">

                <TextView
                    android:id="@+id/inserirGvItemTxtTitulo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/TextTitleCenter"
                    android:textColor="@android:color/white"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextLabelBlue"
                    android:text="@string/categoria"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">

                <Spinner
                    android:id="@+id/gvItemInserirSpnCategoria"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </Spinner>

            </LinearLayout>

            <View
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@color/greyDark"
                android:layout_width = "fill_parent"
                android:layout_height="1.5dp"
                android:layout_centerVertical ="true"
                android:layout_alignParentTop="true"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">

                <TextView
                    style="@style/TextLabelBlue"
                    android:text="@string/data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5">
                </TextView>

                <TextView
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    style="@style/TextLabelBlue"
                    android:text="@string/valor"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">

                <EditText
                    android:focusable="false"
                    android:textSize="20dp"
                    android:background="@null"
                    android:id="@+id/gvItemInserirEdtData"
                    android:layout_marginRight="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:hint="@string/ddmmyyyy"
                    android:inputType="date"/>

                <EditText
                    android:gravity="center"
                    android:textSize="20dp"
                    android:background="@null"
                    android:id="@+id/gvItemInserirEdtValor"
                    android:layout_marginRight="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:hint="@string/v99"
                    android:inputType="date"/>

            </LinearLayout>

            <View
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@color/greyDark"
                android:layout_width = "fill_parent"
                android:layout_height="1.5dp"
                android:layout_centerVertical ="true"
                android:layout_alignParentTop="true"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="40dp">

                <TextView
                    android:gravity="left"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    style="@style/TextLabelBlue"
                    android:text="@string/observacao"/>

                <EditText
                    android:id="@+id/gvItemInserirEdtObservacao"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="20dp"
                    android:hint="@string/InsiraObservacao"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp">

                <Button
                    android:layout_gravity="center"
                    android:id="@+id/gvItemInserirBttSalvar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/salvar"
                    android:textColor="@android:color/white"
                    android:layout_weight="5"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/curved_shape"/>

                <Button
                    android:layout_gravity="center"
                    android:id="@+id/gvItemInserirBttCancelar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cancelar"
                    android:textColor="@android:color/white"
                    android:layout_weight="5"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/curved_shape"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>